@@ -1,3 +1,9 @@
+2008-08-28  Karl Berry  <karl@gnu.org>
+
+	* makeinfo/makeinfo.c (main): convert_from_stream (stdin)
+	if an input filename is named "-".  Suggestion from
+	Bruno Haible, 26 Aug 2008 01:05:28.
+
 2008-08-27  Karl Berry  <karl@gnu.org>
 
 	* makeinfo/makeinfo.c (EXECUTE_STRING_MAX): bump to 32k.
